--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
             </h1>
         </header>
         <section>
-            
+            <div id="fouten">
+
+            </div>
+            <div id="foutLetters">
+                
+            </div>
         </section>
     </main>
 </body>
