--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <header>
-            <h1>
+            <h1 id="titel">
                Galgje
             </h1>
         </header>
